// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VtCloseButton adds 'show-on-hover' class 1`] = `
<button
  aria-label="close"
  class="Vue-Toastification__close-button"
>
  
  ×

</button>
`;

exports[`VtCloseButton adds 'show-on-hover' class 2`] = `
<button
  aria-label="close"
  class="Vue-Toastification__close-button show-on-hover"
>
  
  ×

</button>
`;

exports[`VtCloseButton adds custom class array 1`] = `
<button
  aria-label="close"
  class="Vue-Toastification__close-button my-class my-class2"
>
  
  ×

</button>
`;

exports[`VtCloseButton adds custom class string 1`] = `
<button
  aria-label="close"
  class="Vue-Toastification__close-button my-class"
>
  
  ×

</button>
`;

exports[`VtCloseButton matches default snapshot 1`] = `
<button
  aria-label="close"
  class="Vue-Toastification__close-button"
>
  
  ×

</button>
`;

exports[`VtCloseButton renders custom aria label 1`] = `
<button
  aria-label="text"
  class="Vue-Toastification__close-button"
>
  
  ×

</button>
`;

exports[`VtCloseButton renders default aria label 1`] = `
<button
  aria-label="close"
  class="Vue-Toastification__close-button"
>
  
  ×

</button>
`;

exports[`VtCloseButton string custom component 1`] = `
<div
  aria-label="close"
  class="Vue-Toastification__close-button"
>
  
  ×

</div>
`;

exports[`VtCloseButton vue custom component 1`] = `
<div
  aria-label="close"
  class="Vue-Toastification__close-button"
>
  Example component
</div>
`;
